module/Blog/public/css/blog.css
@import url(http://ajax.googleapis.com/ajax/libs/dojo/1.6/dojox/highlight/resources/pygments/autumn.css);
@import url(http://ajax.googleapis.com/ajax/libs/dojo/1.6/dojox/highlight/resources/highlight.css);

.cloud ul {
    display: block;
    text-align: left;
}

.cloud ul li {
    display: inline;
    list-style: none;
    padding: 0;
    margin: 0;
}

div.example {
    font-family: 'Droid Sans Mono', arial, serif;
    background-color: #F3F3F3;
    padding: 3px;
    margin: 1em;
    border: 1px solid #000;
    overflow: auto;
    -moz-box-shadow: 3px 3px 4px #000;
    -webkit-box-shadow: 3px 3px 4px #000;
    box-shadow: 3px 3px 4px #000;
    /* For IE 8 */
    -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000')";
    /* For IE 5.5 - 7 */
    filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000');
}

.blog .metadata {
    background-color: #F3F3F3;
    padding: 3px;
    margin: 1em;
    border: 1px solid #000;
    overflow: auto;
    -moz-box-shadow: 3px 3px 4px #000;
    -webkit-box-shadow: 3px 3px 4px #000;
    box-shadow: 3px 3px 4px #000;
    /* For IE 8 */
    -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000')";
    /* For IE 5.5 - 7 */
    filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000');
}

.blog .metadata li {
    padding-left: 0;
    margin-left: 0;
}


.blog .entry.meta {
    border-top: 3px solid #676767;
    text-align: right;
    background-color: #F3F3F3;
}

.blog .entry.meta p {
    padding-left: 0.5em;
    padding-right: 0.5em;
}

.blog p.tags {
    padding-bottom: 0.5em;
}

.blog p.date {
    font-weight: bold;
}

.blog h4.entry {
    border-top: 1px dotted #676767;
    padding-top: 0.5em;
}

.blog .entry.body {
    padding-left: 2em;
}

.social-media {
    padding-bottom: 1em;
}

/* ensure we don't mess with disqus styles */

#dsq-content div, #dsq-content p, #dsq-content h3 { clear:none !important; }

#dsq-content #dsq-global-toolbar { clear: both !important; }

.dsq-append-post {zoom: 1;}

div#disqus_thread li, div#disqus_thread span {
    list-style-type: none !important;
}

.dsq-comment, .dsq-comment-header, .dsq-comment-message, .dsq-comment-meta {
    text-indent: 0;
    padding-left: 0;
}

.dsq-comment-meta li, .dsq-comment-actions li {
    text-indent: 0;
}

ul.dsq-comment-actions li {
    display: inline;
}

.dsq-like-activity {
    padding-left: 1em !important;
}

.dsq-toolbar-label {
    padding-left: 1em !important;
}

#dsq-subscribe .dsq-font {
    margin-left: 0.5em !important;
    padding-left: 0.5em !important;
}

